Doc API Cosmetics

--- a/assets/styles/layout/_doc.scss
+++ b/assets/styles/layout/_doc.scss
@@ -259,7 +259,7 @@
 
     th {
         border-bottom: 1px solid var(--surface-border);
-        padding: .75rem;
+        padding: .75rem 1rem;
         text-align: left;
         text-transform: capitalize;
     }
@@ -270,37 +270,36 @@
         }
 
         td {
-            padding: .75rem;
+            padding: .75rem 1rem;
             border-bottom: 1px solid var(--surface-border);
-            white-space: pre-wrap;
+            white-space: pre-line;
             line-height: 1.5;
             scroll-margin-top: 6.5rem;
+
+            &:first-child {
+                color: var(--primary-color);
+                font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, Liberation Mono, monospace;
+            }
 
             .doc-option-type {
                 font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, Liberation Mono, monospace;
                 color: var(--primary-500);
                 font-weight: 500;
 
-                > a {
-                    color: var(--primary-500);
-
-                    &:hover {
-                        text-decoration: underline;
-                    }
-                }
-
                 .doc-option-type-options-container {
                     display: flex;
                     align-items: center;
                 }
+
                 span.doc-option-type-options {
                     color: var(--primary-700);
                 }
-            }
 
-            &:first-child {
-                color: var(--primary-color);
-                font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, Liberation Mono, monospace;
+                &.doc-option-link {
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
             }
 
             .doc-option-name,
@@ -312,8 +311,9 @@
                 color: var(--highlight-text-color);
                 border-radius: 6px;
                 padding: 2px 6px;
-                font-weight: 400;
+                font-weight: 600;
                 font-style: normal;
+                white-space: nowrap;
 
                 .doc-option-link {
                     position: absolute;
@@ -326,16 +326,6 @@
                 }
             }
 
-            .doc-option-default,
-            .doc-option-returnType {
-                display: flex;
-                border-width: 1px;
-                border-style: solid;
-                border-radius: 6px;
-                padding: 2px 6px;
-                max-width: min-content;
-            }
-
             &:hover {
                 .doc-option-name {
                     .doc-option-link {
@@ -346,6 +336,33 @@
                         }
                     }
                 }
+            }
+
+            .doc-option-default,
+            .doc-option-returnType {
+                font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, Liberation Mono, monospace;
+                font-weight: 400;
+                font-style: normal;
+                display: flex;
+                border-width: 1px;
+                border-style: solid;
+                border-radius: 6px;
+                padding: 2px 6px;
+                max-width: min-content;
+            }
+
+            .doc-option-parameter-name {
+                font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, Liberation Mono, monospace;
+                color: var(--primary-700);
+            }
+
+            .doc-option-parameter-type {
+                font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, Liberation Mono, monospace;
+                color: var(--primary-500);
+            }
+
+            .doc-option-params {
+                font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, Liberation Mono, monospace;
             }
 
             .doc-option-light {
