Add discussions link

--- a/assets/styles/layout/landing/_header.scss
+++ b/assets/styles/layout/landing/_header.scss
@@ -61,6 +61,10 @@
             display: none;
         }
 
+        .landing-header-logo {
+            height: 2rem;
+        }
+
         &.landing-header-active {
             background-color: var(--home-header-bg);
             backdrop-filter: blur(12px);
