--- a/assets/styles/layout/_core.scss
+++ b/assets/styles/layout/_core.scss
@@ -7,7 +7,7 @@ body {
     min-height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
-    background-color: var(--surface-ground);
+    background-color: var(--surface-section);
     font-weight: normal;
     color: var(--text-color);
     -webkit-font-smoothing: antialiased;
