--- a/assets/styles/layout/_mixins.scss
+++ b/assets/styles/layout/_mixins.scss
@@ -1,5 +1,6 @@
 @mixin card {
-    background: var(--surface-card);
+    background: var(--surface-ground);
+    border: 1px solid var(--surface-border);
     padding: 2rem;
     border-radius: 10px;
     margin-bottom: 1rem;
