--- a/assets/styles/layout/_responsive.scss
+++ b/assets/styles/layout/_responsive.scss
@@ -8,6 +8,10 @@
         max-width: 1478px;
         margin: 0 auto;
     }
+
+    .layout-sidebar {
+        left: 200px;
+    } 
 }
 
 @media screen and (max-width: 991px) {
