--- a/assets/styles/layout/_topbar.scss
+++ b/assets/styles/layout/_topbar.scss
@@ -4,6 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    padding: 0 4rem;
     width: 100%;
     z-index: 1100;
     transition: background-color 1s;
