--- a/assets/styles/layout/_sidebar.scss
+++ b/assets/styles/layout/_sidebar.scss
@@ -1,15 +1,15 @@
 .layout-sidebar {
     position: sticky;
     left: 0;
-    top: 5rem;
+    top: 7rem;
     height: 100%;
-    width: 250px;
     user-select: none;
     transition: transform .4s cubic-bezier(.05,.74,.2,.99);
     display: flex;
     flex-direction: column;
     padding: 0;
-    flex-shrink: 0;
+    flex: 0 0 250px;
+    margin-right: 4rem;
 
     .logo {
         display: flex;
