Cosmetics on colors and smaller topbar

--- a/assets/styles/layout/_code.scss
+++ b/assets/styles/layout/_code.scss
@@ -356,7 +356,7 @@ pre[class*="language-"] {
 .layout-wrapper-light {
     pre[class*="language-"] {    
         code {
-            background: #505b67 !important;
+            background: #475569 !important;
         }
     }
 }
