Ligtht mode updats

--- a/assets/styles/layout/landing/_dark.scss
+++ b/assets/styles/layout/landing/_dark.scss
@@ -1,6 +1,6 @@
 .landing-dark {
-    --home-highlight-color:#3B82F6;
-    --home-highlight-darker-color:#3575dd;
+    --home-highlight-color:#14B8A6;
+    --home-highlight-darker-color:#0D9488;
     --home-highlight-fore-color:#ffffff;
     --home-bg:#030B17;
     --home-intro-bg:linear-gradient(180deg, #061730 0%, #030B17 100%);
@@ -20,7 +20,6 @@
     --home-herobox-shadow:0px 50px 100px rgba(0, 0, 0, 0.25);
     --home-herobox-strip-top-bg:linear-gradient(360deg, rgba(3, 11, 23, 0) 0%, rgba(11, 37, 73, 0.913125) 53.83%, rgba(7, 24, 48, 0) 101.32%);
     --home-herobox-strip-bottom-bg:linear-gradient(90deg, rgba(3, 11, 23, 0) 0%, #0C284E 50%, rgba(3, 11, 23, 0) 100%);
-    --home-herobox-logo-shadow:0px 50px 100px 0px #000000;
     --home-components-strip-bg:linear-gradient(90deg, rgba(3, 11, 23, 0) 0%, #071934 100%);
     --home-blocks-bg:linear-gradient(180deg, #040B17 0%, #061B38 58.33%, #030B17 100%);
     --home-blocks-block-bg:#0B213F8C;
