--- a/assets/styles/layout/_content.scss
+++ b/assets/styles/layout/_content.scss
@@ -8,7 +8,7 @@
     }
 }
 
-.layout-wrapper-light {
+.layout-light {
     .card {
         background: var(--surface-ground);
         border: 1px solid var(--surface-border);
@@ -18,7 +18,7 @@
     }
 }
 
-.layout-wrapper-dark {
+.layout-dark {
     .card {
         background: var(--surface-card);
         border: 0 none;
