--- a/assets/styles/layout/_doc.scss
+++ b/assets/styles/layout/_doc.scss
@@ -120,7 +120,7 @@
     }
 }
 
-.layout-wrapper-light {
+.layout-light {
     .doc-section-description {
         > p {
             i {
@@ -131,7 +131,7 @@
     }
 }
 
-.layout-wrapper-dark {
+.layout-dark {
     .doc-section-description {
         > p {
             i {
