--- a/assets/styles/layout/landing/_landing.scss
+++ b/assets/styles/layout/landing/_landing.scss
@@ -5,10 +5,9 @@ $landingBreakpointXL: 1199px;
 @import './_main';
 @import './_light';
 @import './_dark';
-@import './_header';
 @import './_hero';
+@import './_users';
 @import './_getstarted';
-@import './_components';
 @import './_themes';
 @import './_blocks';
 @import './_designer';
