--- a/assets/styles/layout/landing/_dark.scss
+++ b/assets/styles/layout/landing/_dark.scss
@@ -1,4 +1,4 @@
-.landing-dark {
+.layout-dark {
     --home-highlight-color:#14B8A6;
     --home-highlight-darker-color:#0D9488;
     --home-highlight-fore-color:#ffffff;
