--- a/public/themes/lara-dark-purple/theme.css
+++ b/public/themes/lara-dark-purple/theme.css
@@ -14,27 +14,27 @@
   --text-color-secondary:rgba(255, 255, 255, 0.6);
   --primary-color:#C4B5FD;
   --primary-color-text:#1c2127;
-  --surface-0: #040d19;
-  --surface-50: #1d2530;
-  --surface-100: #363d47;
-  --surface-200: #4f565e;
-  --surface-300: #686e75;
-  --surface-400: #82868c;
-  --surface-500: #9b9ea3;
-  --surface-600: #b4b6ba;
-  --surface-700: #cdcfd1;
-  --surface-800: #e6e7e8;
+  --surface-0: #111827;
+  --surface-50: #1f2937;
+  --surface-100: #374151;
+  --surface-200: #4b5563;
+  --surface-300: #6b7280;
+  --surface-400: #9ca3af;
+  --surface-500: #d1d5db;
+  --surface-600: #e5e7eb;
+  --surface-700: #f3f4f6;
+  --surface-800: #f9fafb;
   --surface-900: #ffffff;
-  --gray-50: #e6e7e8;
-  --gray-100: #cdcfd1;
-  --gray-200: #b4b6ba;
-  --gray-300: #9b9ea3;
-  --gray-400: #82868c;
-  --gray-500: #686e75;
-  --gray-600: #4f565e;
-  --gray-700: #363d47;
-  --gray-800: #1d2530;
-  --gray-900: #040d19;
+  --gray-50: #f9fafb;
+  --gray-100: #f3f4f6;
+  --gray-200: #e5e7eb;
+  --gray-300: #d1d5db;
+  --gray-400: #9ca3af;
+  --gray-500: #6b7280;
+  --gray-600: #4b5563;
+  --gray-700: #374151;
+  --gray-800: #1f2937;
+  --gray-900: #111827;
   --content-padding:1.25rem;
   --inline-spacing:0.5rem;
   --border-radius:6px;
@@ -42,7 +42,7 @@
   --surface-section:#111827;
   --surface-card:#1f2937;
   --surface-overlay:#1f2937;
-  --surface-border:#374151;
+  --surface-border:#424b57;
   --surface-hover:rgba(255,255,255,.03);
   --focus-ring: 0 0 0 0.2rem rgba(196, 181, 253, 0.5);
   --maskbg: rgba(0, 0, 0, 0.4);
