--- a/assets/styles/layout/_content.scss
+++ b/assets/styles/layout/_content.scss
@@ -10,7 +10,7 @@
 
 .layout-light {
     .card {
-        background: var(--surface-ground);
+        background: var(--surface-card);
         border: 1px solid var(--surface-border);
         padding: 2rem;
         border-radius: 10px;
