--- a/assets/styles/layout/landing/_light.scss
+++ b/assets/styles/layout/landing/_light.scss
@@ -1,6 +1,6 @@
 .layout-light {
-    --home-highlight-color:#14B8A6;
-    --home-highlight-darker-color:#0D9488;
+    --home-highlight-color:#10b981;
+    --home-highlight-darker-color:#059669;
     --home-highlight-fore-color:#ffffff;
     --home-bg:#F9FAFB;
     --home-border-color:rgba(0,0,0,.1);
