--- a/assets/styles/layout/landing/_dark.scss
+++ b/assets/styles/layout/landing/_dark.scss
@@ -1,6 +1,6 @@
 .layout-dark {
-    --home-highlight-color:#14B8A6;
-    --home-highlight-darker-color:#0D9488;
+    --home-highlight-color:#10b981;
+    --home-highlight-darker-color:#059669;
     --home-highlight-fore-color:#ffffff;
     --home-bg:#111827;
     --home-border-color:#424b57;
