--- a/assets/styles/layout/landing/_light.scss
+++ b/assets/styles/layout/landing/_light.scss
@@ -9,9 +9,9 @@
     --home-card-shadow:0px 7px 15px 0px rgba(0, 0, 0, 0.02), 0px 28px 28px 0px rgba(0, 0, 0, 0.02), 0px 63px 38px 0px rgba(0, 0, 0, 0.01), 0px 111px 44px 0px rgba(0, 0, 0, 0.00), 0px 174px 49px 0px rgba(0, 0, 0, 0.00);
     --home-box-bg:#ffffff;
     --home-linkbox-bg:#ffffff;
-    --home-linkbox-border:1px solid #C7E0FF;
+    --home-linkbox-border:1px solid rgba(0,0,0,.1);
     --home-linkbox-text-color:#191919;
-    --home-linkbox-hover-bg:#e3f0ff;
+    --home-linkbox-hover-bg:#e5e7eb;
     --home-blocks-bg:transparent;
     --home-blocks-block-bg:#ffffff;
     --home-blocks-block-shadow:-10px 4px 10px 0px rgba(0, 0, 0, .1), -10px 4px 25px rgba(0, 0, 0, .1);
