--- a/assets/styles/layout/_responsive.scss
+++ b/assets/styles/layout/_responsive.scss
@@ -15,102 +15,100 @@
 }
 
 @media screen and (max-width: 991px) {
-    .layout-wrapper {    
-        .layout-topbar {   
-            padding-left: 2rem;
-            padding-right: 2rem;
+    .layout-topbar-inner {   
+        padding-left: 2rem;
+        padding-right: 2rem;
 
-            .menu-button {
-                display: block;
-            }
-
-            .layout-topbar-logo-container {
-                width: auto;
-                margin-right: 0;
-            }
-
-            #docsearch {
-                margin-left: auto;
-                margin-right: .5rem;
-            }
-
-            .DocSearch-Button {
-                width: 2rem;
-                height: 2rem;
-                overflow: hidden;
-                padding: 0;
-                justify-content: center;
-                align-items: center;
-
-                .DocSearch-Search-Icon {
-                    width: 1rem;
-                    height: 1rem;
-                }
-
-                .DocSearch-Button-Placeholder,
-                .DocSearch-Button-Keys {
-                    display: none;
-                }
-            }
-        }
-    
-        .layout-sidebar {
-            top: 0;
-            left: 0;
-            position: fixed;
-            z-index: 1102;
-            height: 100%;
-            transform: translateX(-100%);
-            background-color: var(--surface-overlay);
-            width: 300px;
-            opacity: 0;
-
-            nav {
-                padding: 1rem 1rem;
-            }
-    
-            &.active {
-                opacity: 1;
-                transform: translateX(0);
-            }
-        }
-     
-        .layout-mask {
-            background-color: rgba(0, 0, 0, 0.1);
-    
-            &.layout-mask-active {
-                z-index: 1101;
-                width: 100%;
-                height: 100%;
-                position: fixed;
-                top: 0;
-                left: 0;
-                background-color: rgba(0, 0, 0, 0.4);
-                transition: background-color .5s;
-            }
+        .menu-button {
+            display: block;
         }
 
-        .doc-section-nav {
-            display: none;
-        }
-
-        .doc-tabmenu {
+        .layout-topbar-logo-container {
+            width: auto;
             margin-right: 0;
         }
 
-        .video-container {
-            position: relative;
-            width: 100%;
-            height: 0;
-            padding-bottom: 56.25%;
+        #docsearch {
+            margin-left: auto;
+            margin-right: .5rem;
+        }
 
-            iframe {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
+        .DocSearch-Button {
+            width: 2rem;
+            height: 2rem;
+            overflow: hidden;
+            padding: 0;
+            justify-content: center;
+            align-items: center;
+
+            .DocSearch-Search-Icon {
+                width: 1rem;
+                height: 1rem;
             }
+
+            .DocSearch-Button-Placeholder,
+            .DocSearch-Button-Keys {
+                display: none;
+            }
+        }
+    }
+
+    .layout-sidebar {
+        top: 0;
+        left: 0;
+        position: fixed;
+        z-index: 1102;
+        height: 100%;
+        transform: translateX(-100%);
+        background-color: var(--surface-overlay);
+        width: 300px;
+        opacity: 0;
+
+        nav {
+            padding: 1rem 1rem;
+        }
+
+        &.active {
+            opacity: 1;
+            transform: translateX(0);
+        }
+    }
+
+    .layout-mask {
+        background-color: rgba(0, 0, 0, 0.1);
+
+        &.layout-mask-active {
+            z-index: 1101;
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            background-color: rgba(0, 0, 0, 0.4);
+            transition: background-color .5s;
+        }
+    }
+
+    .doc-section-nav {
+        display: none;
+    }
+
+    .doc-tabmenu {
+        margin-right: 0;
+    }
+
+    .video-container {
+        position: relative;
+        width: 100%;
+        height: 0;
+        padding-bottom: 56.25%;
+
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
         }
     }
 
@@ -126,38 +124,36 @@
 }
 
 @media screen and (max-width: 575px) {
-    .layout-wrapper {
-        .layout-topbar {
-            padding-left: 1rem;
-            padding-right: 1rem;
+    .layout-topbar-inner {
+        padding-left: 1rem;
+        padding-right: 1rem;
 
-            .layout-topbar-logo {
-                display: none;
-            }
-
-            .layout-topbar-icon {
-                display: block;
-            }
+        .layout-topbar-logo {
+            display: none;
         }
 
-        .layout-content {
-            padding-left: 1rem;
-            padding-right: 1rem;
+        .layout-topbar-icon {
+            display: block;
         }
+    }
 
-        .layout-footer {
-            padding-left: 1rem;
-            padding-right: 1rem;
-        }
+    .layout-content {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 
-        .doc-tabmenu {
-            li {
-                flex: 1 1 0;
+    .layout-footer {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 
-                button {
-                    width: 100%;
-                    min-width: auto;
-                }
+    .doc-tabmenu {
+        li {
+            flex: 1 1 0;
+
+            button {
+                width: 100%;
+                min-width: auto;
             }
         }
     }
