Showcase cosmetics on colors and content

--- a/assets/styles/layout/_sidebar.scss
+++ b/assets/styles/layout/_sidebar.scss
@@ -65,7 +65,7 @@
                 &:hover {
                     .menu-icon {
                         i {
-                            color: var(--surface-900);
+                            color: var(--primary-color);
                         }
                     }
 
