--- a/assets/styles/layout/landing/_light.scss
+++ b/assets/styles/layout/landing/_light.scss
@@ -4,13 +4,13 @@
     --home-highlight-fore-color:#ffffff;
     --home-bg:#F9FAFB;
     --home-border-color:rgba(0,0,0,.1);
-    --home-primary-text-color:#191919;
-    --home-secondary-text-color:#73879E;
-    --home-card-shadow:0px 7px 15px 0px rgba(0, 0, 0, 0.02), 0px 28px 28px 0px rgba(0, 0, 0, 0.02), 0px 63px 38px 0px rgba(0, 0, 0, 0.01), 0px 111px 44px 0px rgba(0, 0, 0, 0.00), 0px 174px 49px 0px rgba(0, 0, 0, 0.00);
+    --home-primary-text-color:#030712;
+    --home-secondary-text-color:#6b7280;
+    --home-card-shadow:0px 7px 15px 0px rgba(0, 0, 0, 0.02), 0px 28px 28px 0px rgba(0, 0, 0, 0.02), 0px 63px 38px 0px rgba(0, 0, 0, 0.01);
     --home-box-bg:#ffffff;
     --home-linkbox-bg:#ffffff;
     --home-linkbox-border:1px solid rgba(0,0,0,.1);
-    --home-linkbox-text-color:#191919;
+    --home-linkbox-text-color:#030712;
     --home-linkbox-hover-bg:#e5e7eb;
     --home-blocks-bg:transparent;
     --home-blocks-block-bg:#ffffff;
@@ -18,27 +18,27 @@
     --home-blocks-border-left:5px solid rgba(0,0,0,.1);
     --home-blocks-border-bottom:7px solid rgba(0,0,0,.1);
     --home-blocks-border:1px solid rgba(0,0,0,.1);
-    --home-blocks-sidebar-bg:#f9fafb;
-    --home-blocks-list-bg:#f2f3f3;
+    --home-blocks-sidebar-bg:#f3f4f6;
+    --home-blocks-list-bg:#f9fafb;
     --home-blocks-main-bg:#ffffff;
     --home-blocks-main-border:1px solid rgba(0,0,0,.1);
-    --home-blocks-item-bg:#f2f3f3;
-    --home-blocks-image-bg:#a1e3db;
-    --home-blocks-text-color:#b3b4b5;
+    --home-blocks-item-bg:#f4f5f7;
+    --home-blocks-image-bg:#e5e7eb;
+    --home-blocks-text-color:#d1d5db;
     --home-blocks-active-shadow:0px 30px 50px 0px rgba(0, 0, 0, .1);
-    --home-blocks-active-border-top:1px solid rgba(0,0,0,.1);
-    --home-blocks-active-border-right:1px solid rgba(0,0,0,.1);
-    --home-blocks-active-border-bottom:6px solid rgba(0,0,0,.1);
-    --home-blocks-active-border-left:4px solid rgba(0,0,0,.1);
+    --home-blocks-active-border-top:1px solid rgba(0,0,0,.07);
+    --home-blocks-active-border-right:1px solid rgba(0,0,0,.07);
+    --home-blocks-active-border-bottom:4px solid rgba(0,0,0,.07);
+    --home-blocks-active-border-left:4px solid rgba(0,0,0,.07);
     --home-blocks-animation-shadow:0px 30px 50px 10px rgba(0, 0, 0, .2);
-    --home-blocks-tablebar-bg:#a1e3db;
-    --home-blocks-bar-bg:#a1e3db;
+    --home-blocks-tablebar-bg:#d1d5db;
+    --home-blocks-bar-bg:#d1d5db;
     --home-blocks-bar-button-bg:#ffffff;
-    --home-blocks-circle-bg:#a1e3db;
+    --home-blocks-circle-bg:#c7cad0;
     --home-templates-bg:transparent;
-    --home-templates-block-shadow:0px 4.787564754486084px 10px 0px rgba(0,0,0,.1);
-    --home-templates-block-border-left:5px solid #edf0f3;
-    --home-templates-block-border-bottom:7px solid#edf0f3;
+    --home-templates-block-shadow:0px 5px 10px 0px rgba(0,0,0,.1);
+    --home-templates-block-border-left:5px solid #d1d5db;
+    --home-templates-block-border-bottom:7px solid #d1d5db;
     --home-templates-line:rgba(0,0,0,.1);
     --home-templates-block-hover-bg:rgba(0, 0, 0, 0.2);
     --home-templates-btn-bg:rgba(0, 0, 0, 0.5);
@@ -48,5 +48,5 @@
     --home-templates-btn-border-right:1px solid rgba(0,0,0,.1);
     --home-templates-btn-border-bottom:4px solid rgba(0,0,0,.1);
     --home-templates-btn-border-left:3px solid rgba(0,0,0,.1);
-    --home-features-card-shadow: 0px 7px 15px 0px rgba(0, 0, 0, 0.02), 0px 28px 28px 0px rgba(0, 0, 0, 0.02), 0px 63px 38px 0px rgba(0, 0, 0, 0.01), 0px 111px 44px 0px rgba(0, 0, 0, 0.00), 0px 174px 49px 0px rgba(0, 0, 0, 0.00);
+    --home-features-card-shadow: 0px 7px 15px 0px rgba(0, 0, 0, 0.02), 0px 28px 28px 0px rgba(0, 0, 0, 0.02), 0px 63px 38px 0px rgba(0, 0, 0, 0.01);
 }
