--- a/assets/styles/layout/landing/_dark.scss
+++ b/assets/styles/layout/landing/_dark.scss
@@ -8,15 +8,15 @@
     --home-secondary-text-color:rgba(255,255,255,.6);
     --home-card-shadow:0px 50px 100px rgba(0, 0, 0, 0.25);
     --home-box-bg:#1f2937;
-    --home-linkbox-bg:rgba(255, 255, 255, .1);
-    --home-linkbox-border:1px solid rgba(255, 255, 255, .2);
+    --home-linkbox-bg:rgba(255, 255, 255, .05);
+    --home-linkbox-border:1px solid rgba(255, 255, 255, .1);
     --home-linkbox-text-color:#ffffff;
-    --home-linkbox-hover-bg:rgba(255, 255, 255, .2);
+    --home-linkbox-hover-bg:rgba(255, 255, 255, .1);
     --home-blocks-bg:transparent;
     --home-blocks-block-bg:#111827;
-    --home-blocks-block-shadow:0px 4.787564754486084px 10px 0px #0000001A , 0px 4px 25px rgba(0, 0, 0, 0.288);
-    --home-blocks-border-left:5px solid #424b57;
-    --home-blocks-border-bottom:7px solid #424b57;
+    --home-blocks-block-shadow:0px 5px 10px 0px rgba(0, 0, 0, 0.25) , 0px 4px 25px rgba(0, 0, 0, 0.25);
+    --home-blocks-border-left:5px solid #1f2937;
+    --home-blocks-border-bottom:7px solid #1f2937;
     --home-blocks-border:1px solid #424b57;
     --home-blocks-sidebar-bg:#1f2937;
     --home-blocks-list-bg:#28323f;
@@ -24,26 +24,26 @@
     --home-blocks-main-border:1px solid #424b57;
     --home-blocks-item-bg:#1f2937;
     --home-blocks-image-bg:#28323f;
-    --home-blocks-text-color:rgba(255,255,255,.87);
-    --home-blocks-active-shadow:0px 30px 50px 0px #00000049;
+    --home-blocks-text-color:#4b5563;
+    --home-blocks-active-shadow:0px 30px 50px 0px rgba(0, 0, 0, 0.25);
     --home-blocks-active-border-top:1px solid #424b57;
     --home-blocks-active-border-right:1px solid #424b57;
     --home-blocks-active-border-bottom:6px solid #424b57;
     --home-blocks-active-border-left:4px solid #424b57;
-    --home-blocks-animation-shadow:0px 30px 50px 20px #00000059;
-    --home-blocks-tablebar-bg:#424b57;
-    --home-blocks-bar-bg:#0D9488;
-    --home-blocks-bar-button-bg:#0D9488;
-    --home-blocks-circle-bg:#0D9488;
+    --home-blocks-animation-shadow:0px 30px 50px 20px rgba(0, 0, 0, 0.25);
+    --home-blocks-tablebar-bg:#4b5563;
+    --home-blocks-bar-bg:#4b5563;
+    --home-blocks-bar-button-bg:#ffffff;
+    --home-blocks-circle-bg:#4b5563;
     --home-templates-bg:transparent;
-    --home-templates-block-shadow:0px 4.787564754486084px 10px 0px #0000001a;
+    --home-templates-block-shadow:0px 5px 10px 0px rgba(0, 0, 0, 0.25);
     --home-templates-block-border-left:5px solid #424b57;
     --home-templates-block-border-bottom:7px solid #424b57;
     --home-templates-line:rgba(255,255,255,.1);
-    --home-templates-block-hover-bg:rgba(255,255,255,.09);
+    --home-templates-block-hover-bg:rgba(255,255,255,.1);
     --home-templates-btn-bg:#1f2937;
     --home-templates-btn-text-color:#ffffff;
-    --home-templates-btn-shadow:0px 10px 15px 0px #00000040;
+    --home-templates-btn-shadow:0px 10px 15px 0px rgba(0, 0, 0, 0.25);
     --home-templates-btn-border-top:1px solid #424b57;
     --home-templates-btn-border-right:1px solid #424b57;
     --home-templates-btn-border-bottom:4px solid #424b57;
