--- a/assets/styles/layout/_footer.scss
+++ b/assets/styles/layout/_footer.scss
@@ -1,5 +1,5 @@
 .layout-footer {
-    padding: 2rem 0;
+    padding: 2rem 4rem;
     margin-top: 4rem;
     display: flex;
     align-items: center;
